infrastructure/flux-extras/virtualservice-github-webhook.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: github-webhook
  namespace: flux-system
spec:
  hosts:
  - github-webhook.cd.${environment}.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: "webhook-receiver"
    route:
    - destination:
        port:
          number: 80
        host: webhook-receiver
