infrastructure/flux-extras/virtualservice-webhook-cd.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webhook-cd
  namespace: flux-system
spec:
  hosts:
  - webhook.cd.${environment}.pauwelslabs.com
  gateways:
  - ${infranamespaceprefix}istio-ingress/pauwelslabs-com
  http:
  - name: "webhook-receiver"
    route:
    - destination:
        port:
          number: 80
        host: webhook-receiver
